--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -3,12 +3,6 @@
     margin: auto;
 }
 
-.Sections {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-
 .Blog ul {
     list-style: none;
     margin: 0;
@@ -28,6 +22,7 @@
 }
 
 .Blog a:hover,
-.Blog a:active {
+.Blog a:active,
+.Blog a.active {
     color: #fa923f;
 }
